# parallel-raytracing

./: .gitignore  CMake.gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.cache/clangd/index/: Application.cpp.3B08D28318816500.idx  Application.cu.21F5423E85B4F7F2.idx  CUDA_Renderer.cu.3B81C3B44D4B9E87.idx  CUDA_Renderer.h.E42B9828D70D3540.idx  ImageHandler.cpp.128572B99D820823.idx  Log.h.A71A273FFFFC341B.idx  Renderer.cpp.1EEE1973156C46A4.idx  Renderer.h.1D6CCCB2E743C6CB.idx  Scene.cpp.33E32F44EBD3B169.idx  Scene.h.2B1BAABD82569C0C.idx  SceneHandler.cpp.1A482AF5F20CC7F9.idx  SceneHandler.h.47F5207A3B742434.idx  _fixes.hpp.925AD330890DFCC1.idx  _vectorize.hpp.6128930F84E842C7.idx  common.hpp.B409C3A7ECE81563.idx  compute_common.hpp.48E2C0D7EE9DBC3E.idx  compute_vector_decl.hpp.8B7F7FBF25F1E884.idx  compute_vector_relational.hpp.818F3DD96DDDC10A.idx  cudaRaytracing.cu.3341601EAE129CE3.idx  cudaRaytracing.h.E5E99205C86A3FBA.idx  cudaRenderer.cu.2F255AE31B7B3F31.idx  earcut.hpp.ED7D7C658590D7CD.idx  exponential.hpp.CEFBE86160C95BFD.idx  func_common.inl.7C5FD9B012366ABB.idx  func_exponential.inl.BC9AD687A9F56951.idx  func_geometric.inl.FCD31286D9373325.idx  func_integer.inl.A6B261C0C2580FF5.idx  func_matrix.inl.67C2DEADF106B169.idx  func_packing.inl.3160E115A2787DA7.idx  func_trigonometric.inl.B4EE83EB214DE0AF.idx  func_vector_relational.inl.EA0FC1F74FE88483.idx  fwd.hpp.53196A2D4E9353DA.idx  geometric.hpp.0B655D70C4DFD943.idx  glm.hpp.6B9D65B8D6AC53D4.idx  integer.hpp.1037BC4FCC2C0B1F.idx  mat2x2.hpp.C84D61AA7A17B830.idx  mat2x3.hpp.573A047452A60154.idx  mat2x4.hpp.F73A0DCC6505DA51.idx  mat3x2.hpp.60ADB53D2CD66C3B.idx  mat3x3.hpp.828CB1FEF371C9C1.idx  (+116 more)
libs/: Log.h
multi-core_MPI_OpenMP/: CMakeLists.txt
multi-core_MPI_OpenMP/src/: Application.cpp  Renderer.cpp  Renderer.h  Scene.h  vec3.h
multi-core_MPI_OpenMP/test/: blender-3.5-splash.mtl
single-GPU_CUDA/: CMakeLists.txt
single-GPU_CUDA/.cache/clangd/index/: Application.cpp.FA45B2C7338DE10F.idx  Application.cu.BB0941162DDFCB2F.idx  Camera.h.D9CEC04AE1D4AA3B.idx  Renderer.cu.72AF9CD33BF204A6.idx  Renderer.h.56926086E6508204.idx  Scene.cpp.E3B2A0F8695A1634.idx  Scene.h.10C00F0493D238C2.idx  earcut.hpp.E0BB46E6DC2ADA54.idx  main.cu.F766D138FAD6B745.idx  stb_image.h.E46AF24EE32486F5.idx  stb_image_write.h.3A4A0E9E1C79441E.idx  tiny_obj_loader.h.B248B4750226EFBE.idx  vec3.h.CFBD5A96A81DF902.idx
single-GPU_CUDA/src/: Camera.h  Scene.cpp  Scene.h  main.cu
src/: Application.cpp  CUDA_Renderer.cu  CUDA_Renderer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneHandler.cpp  SceneHandler.h  cudaRaytracing.cu  cudaRaytracing.h  vec3.h
test/: .cornell_box.obj.swp  cornell_box.mtl
